# Compgraph

./: CMakeLists.txt  README.txt
B-Spline/: CMakeLists.txt
B-Spline_Curve/: B-Spline_Curve.cpp  CMakeLists.txt
NURBS/: CMakeLists.txt  NURBS.cpp
NURBS_Curve/: CMakeLists.txt
NURBS_Surface/: CMakeLists.txt  NURBS_Surface.cpp
Subdivision/: CMakeLists.txt  Subdivision.cpp
Subdivision_Curve/: CMakeLists.txt  Subdivision_Curve.cpp
inc/: point2D.h
