#B-Spline_Curve curve
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME B-Spline_Curves_Curve)
PROJECT(BSpline CXX)

add_compile_options(-std=c++11)
SET(CMAKE_C_COMPILER g++)

AUX_SOURCE_DIRECTORY(. B-Spline_Curve)
ADD_LIBRARY(${PACKAGE_NAME} )

INCLUDE_DIRECTORIES(. ../inc)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET(CMAKE_VERBOSE_MAKEFILE on)

FIND_PACKAGE(PkgConfig REQUIRED)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)

add_executable(B-Spline_Curve.out B-Spline_Curve.cpp)

INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} )

TARGET_LINK_LIBRARIES(B-Spline_Curve.out ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLFW_LIBRARIES} )
