#NURBS curve
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PACKAGE_NAME NURBS)
PROJECT(BSpline CXX)

add_compile_options(-std=c++11)
SET(CMAKE_C_COMPILER g++)

AUX_SOURCE_DIRECTORY(. NURBS)
ADD_LIBRARY(${PACKAGE_NAME})

INCLUDE_DIRECTORIES(. ../inc)

SET_TARGET_PROPERTIES(${PACKAGE_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET(CMAKE_VERBOSE_MAKEFILE on)

FIND_PACKAGE(PkgConfig REQUIRED)

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
pkg_search_module(GLFW REQUIRED glfw3)

add_executable(NURBS.out NURBS.cpp)

INCLUDE_DIRECTORIES( ${OPENGL_INCLUDE_DIRS}  ${GLUT_INCLUDE_DIRS} ${GLFW_INCLUDE_DIRS} )

TARGET_LINK_LIBRARIES(NURBS.out ${OPENGL_LIBRARIES} ${GLUT_LIBRARY} ${GLFW_LIBRARIES} )
